--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: hsl(203deg 89% 41%);
+  --ifm-color-primary-dark: hsl(203deg 89% 36%);
+  --ifm-color-primary-darker: hsl(203deg 89% 31%);
+  --ifm-color-primary-darkest: hsl(203deg 89% 26%);
+  --ifm-color-primary-light: hsl(203deg 89% 46%);
+  --ifm-color-primary-lighter: hsl(203deg 89% 51%);
+  --ifm-color-primary-lightest: hsl(203deg 89% 56%);
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: hsl(198.1deg 70.2% 50%);
+  --ifm-color-primary-dark: hsl(198.1deg 70.2% 45%);
+  --ifm-color-primary-darker: hsl(198.1deg 70.2% 40%);
+  --ifm-color-primary-darkest: hsl(198.1deg 70.2% 35%);
+  --ifm-color-primary-light: hsl(198.1deg 70.2% 50%);
+  --ifm-color-primary-lighter: hsl(198.1deg 70.2% 55%);
+  --ifm-color-primary-lightest: hsl(198.1deg 70.2% 60%);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
