--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,14 @@
   --ifm-color-primary-lightest: hsl(203deg 89% 56%);
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  /* font */
+  --ifm-h1-font-size: 1.75rem;
+  --ifm-h2-font-size: 1.5rem;
+  --ifm-h3-font-size: 1.25rem;
+  --ifm-h4-font-size: 1rem;
+  --ifm-h5-font-size: 0.875rem;
+  --ifm-h6-font-size: 0.85rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,4 +35,29 @@
   --ifm-color-primary-lighter: hsl(198.1deg 70.2% 55%);
   --ifm-color-primary-lightest: hsl(198.1deg 70.2% 60%);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex-2 {
+  flex: 2;
+}
+
+.flex__center {
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.flex__col--between {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
